# flappy

./: build-android.yml
.github/workflows/: build-android.yml
flappy/: CMakeLists.txt  Makefile  setup.iss
flappy/android/: settings.gradle
flappy/android/app/: CMakeLists.txt  build.gradle
flappy/android/app/src/main/: AndroidManifest.xml
flappy/include/: pipe.h  score.h  settings.h
flappy/src/: bg_gnd.c  bird.c  main.c  pipe.c  score.c
